2009-05-09  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + converted to UTF-8

2009-04-14  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tpwd: + added --zsh option

	* genpass.sh: + increased portability
	+ added sha1sum as an alternative if md5sum is missing

	* rand-files.pl: + partially rewritten
	+ added ranking
	+ removed "find" functionality (TODO)

	* installkernel: + fixed bug where "su" was interpreted as "-su"
	when "--" was in effect

2009-04-11  Michal Nazarewicz  <mina86/AT/mina86.com>

	cdiff.c: + added isatty() checking (no colors if stdout is not a TTY)

2008-11-08  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + its "Oscar Wilde" not "Oscar Wide", dunno how this
	typo show up in the first place
	+ a few new quotes

	* LICENSE.GPL3: New file

	+ changed license (from GPLv2 to GPLv3) of some of the files
	+ updated comments of many files (added "This is part of TAC")

	* LICENSE.AFL: + updated to AFL 3.0

2008-11-01  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mountiso.c: + added large file support

	* Makefile: + mountiso mode changed to 4750 and owneship to
	root:root (ie. fewer users can use it by default now)
	+ removed cdif.sed, get_mks_vir_bases and ivona.sh from default
	install target

2008-07-25  Michal Nazarewicz  <mina86/AT/mina86.com>

	* rand-files.pl: New file

	* getlyrics.pl: + changed to mach new Audio::MPD API

2008-06-01  Michal Nazarewicz  <mina86/AT/mina86.com>

	* arpping.c: New file

	* null.c: + -c switch added (for chdir)

2008-04-28  Michal Nazarewicz  <mina86/AT/mina86.com>

	* null.c: + fixed bug where -w was ignored when daemonizing

2008-04-20  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mpd-show.c: + fixed wwriting outside of buffer

2008-04-19  Michal Nazarewicz  <mina86/AT/mina86.com>

	* null.c: + -N switch for adjusting nice
	+ now waits for 1 sec in case child will terminate
	+ -w switch

2008-04-17  Michal Nazarewicz  <mina86/AT/mina86.com>

	* null.c: + removed configuration macros